Added capabilities to create and run docker image as well to build a fat jar of the jdbc driver. Some bug fixes and code improvements.

--- a/ojp-server/pom.xml
+++ b/ojp-server/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <grpc.version>1.70.0</grpc.version>
         <slf4j.version>2.0.17</slf4j.version>
+        <jib.plugin.version>3.4.5</jib.plugin.version>
     </properties>
 
     <dependencies>
@@ -111,24 +112,25 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- Docker image: Jib plugin -->
             <plugin>
-                <groupId>com.jolira</groupId>
-                <artifactId>onejar-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <mainClass>org.baeldung.executable.
-                                ExecutableMavenJar</mainClass>
-                            <attachToBuild>true</attachToBuild>
-                            <filename>
-                                ${project.build.finalName}.${project.packaging}
-                            </filename>
-                        </configuration>
-                        <goals>
-                            <goal>one-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>${jib.plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:22-jre</image>
+                    </from>
+                    <to>
+                        <image>rrobetti/ojp:0.0.1-alpha</image>
+                    </to>
+                    <container>
+                        <mainClass>org.openjdbcproxy.grpc.server.GrpcServer</mainClass>
+                        <ports>
+                            <port>1059</port>
+                        </ports>
+                    </container>
+                </configuration>
             </plugin>
         </plugins>
     </build>
