--- a/ojp-grpc-commons/pom.xml
+++ b/ojp-grpc-commons/pom.xml
@@ -15,6 +15,9 @@
     </parent>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+
         <grpc.version>1.73.0</grpc.version>
         <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
         <lombok.version>1.18.38</lombok.version>
