--- a/ojp-jdbc-driver/pom.xml
+++ b/ojp-jdbc-driver/pom.xml
@@ -15,6 +15,9 @@
     </parent>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+
         <slf4j.version>2.0.17</slf4j.version>
     </properties>
 
