--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     if: "! contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     strategy:
+      fail-fast: false
       matrix:
         java-version: [ 11, 17, 21, 22 ]
 
