ci: fixes missing module for the docker-build workflow [skip ci]
ci: fixes missing module for the docker-build workflow [skip ci]

ci: added (also-make) flag [skip ci]

ci: fixes Build and push Docker image steo [skip ci]

ci: fixes Build and push Docker image steo [skip ci]

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,7 +36,9 @@ jobs:
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
           DOCKERHUB_REPO: ${{ github.event.inputs.repository }}
         run: |
-          mvn compile jib:build -pl ojp-server \
+            mvn install -N -DskipTests
+            mvn install -pl ojp-grpc-commons -DskipTests
+            mvn compile jib:build -pl ojp-server \
             -Djib.to.auth.username="${DOCKERHUB_USER}" \
             -Djib.to.auth.password="${DOCKERHUB_TOKEN}" \
             -Djib.to.image="${DOCKERHUB_REPO}/ojp:${{ github.event.inputs.tag }}" \
