--- a/ojp-grpc-commons/pom.xml
+++ b/ojp-grpc-commons/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ojp-grpc-commons</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.4-alpha</version>
 
     <parent>
         <groupId>org.openjdbcproxy</groupId>
         <artifactId>ojp-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.4-alpha</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
