--- a/ojp-jdbc-driver/pom.xml
+++ b/ojp-jdbc-driver/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <name>OJP JDBC Driver</name>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ojp-jdbc-driver</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.4-alpha</version>
 
     <parent>
         <groupId>org.openjdbcproxy</groupId>
         <artifactId>ojp-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.4-alpha</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -22,7 +23,7 @@
         <dependency>
             <groupId>org.openjdbcproxy</groupId>
             <artifactId>ojp-grpc-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.4-alpha</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -97,6 +98,34 @@
                 </configuration>
                 <version>3.2.5</version>
             </plugin>
+            <!-- Sources JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Javadoc JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Add the Maven Shade Plugin for fat jar -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -118,7 +147,62 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--Signs the JARs for deployments-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--Deploys to maven central-->
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <!-- Add SCM and project info for Maven Central requirements -->
+    <scm>
+        <url>https://github.com/rrobetti/ojp</url>
+        <connection>scm:git:https://github.com/rrobetti/ojp.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:rrobetti/ojp.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>rrobetti</id>
+            <name>Rogerio Robetti</name>
+        </developer>
+        <developer>
+            <id>petruki</id>
+            <name>Roger Floriano</name>
+        </developer>
+    </developers>
+
+    <url>https://github.com/rrobetti/ojp</url>
+    <description>JDBC driver for OJP (Open JDBC Proxy)</description>
 
 </project>
