--- a/ojp-server/pom.xml
+++ b/ojp-server/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ojp-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.4-alpha</version>
 
     <parent>
         <groupId>org.openjdbcproxy</groupId>
         <artifactId>ojp-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.4-alpha</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.openjdbcproxy</groupId>
             <artifactId>ojp-grpc-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.4-alpha</version>
         </dependency>
 
         <dependency>
@@ -155,7 +155,7 @@
                         <image>eclipse-temurin:22-jre</image>
                     </from>
                     <to>
-                        <image>rrobetti/ojp:0.0.3-alpha</image>
+                        <image>rrobetti/ojp:0.0.4-alpha</image>
                     </to>
                     <container>
                         <mainClass>org.openjdbcproxy.grpc.server.GrpcServer</mainClass>
